--- a/pom.xml
+++ b/pom.xml
@@ -93,4 +93,23 @@
 
     </dependencies>
 
+    <build>
+
+        <plugins>
+
+            <!-- Exclude the example apps from test coverage -->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>org/kiwiproject/curator/example/**/*</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+
+        </plugins>
+
+    </build>
+
 </project>
